[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-fix"
version = "0.1.0"
description = "Parallel AI agents race to fix your failing tests"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "testing", "debugging", "llm", "agents"]
authors = [{ name = "takawasi" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.scripts]
multi-agent-fix = "multi_agent_fix.cli:main"

[project.urls]
Homepage = "https://github.com/takawasi/multi-agent-fix"
Repository = "https://github.com/takawasi/multi-agent-fix"

[tool.hatch.build.targets.wheel]
packages = ["multi_agent_fix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
